--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: setup node
-      uses: actions/setup-node@v4git
+      uses: actions/setup-node@v4
       with:
         node-version: 22
 
